Give better contrast for vouchers (Fix #125)

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -44,6 +44,7 @@ body {
 .voucher-box {
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size: 1.4em;
+    color: #333333;
 }
 
 .thumbnail img {
